<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">OST Tools</string>
    <string name="github" translatable="false">GitHub</string>
    <string name="settings">Settings</string>
    <string name="about_app">About program</string>
    <string name="version">Version</string>
    <string name="vm">Virtual Machine</string>
    <string name="video_editing_tool">Video editing tool</string>
    <string name="video_recording_tool">Video recording tool</string>
    <string name="preview_tool">Preview tool</string>
    <string name="home">Home</string>
    <string name="friends">Friends</string>
    <string name="information">Information</string>
    <string name="social_links">Social links</string>
    <string name="system_default">System default</string>
    <string name="dark_mode_settings">Dark mode settings</string>
    <string name="checking_for_updates">Checking for updates…</string>
    <string name="error_getting_version_information">Error getting version data</string>
    <string name="update_available">Update available!</string>
    <string name="latest_version_installed">Latest version installed</string>
    <string name="downloading_update">Downloading update…</string>
    <string name="update">Update</string>
    <string name="download_canceled">Download canceled</string>
    <string name="cancel">Cancel</string>
    <string name="update_file_not_found">Update file not found.</string>
    <string name="write_to_external_storage_permission">Write to external storage permission is required to download update</string>
    <string name="access_to_all_files_permission">Access to all files permission is required to download update</string>
    <string name="install_unknown_apps_permission">Install unknown apps permission is required to update</string>
    <string name="notification_permission">Notification permission is required to update</string>
    <string name="check_for_updates">Check for updates</string>
    <string name="attention">Attention</string>
    <string name="ignore">Ignore</string>
    <string name="install_update_q">Install update?</string>
    <string name="install">Install</string>
    <string name="back">Back</string>
    <string name="tiktok" translatable="false">TikTok</string>
    <string name="operating_system_tester" translatable="false">Operating System Tester</string>
    <string name="telegram" translatable="false">Telegram</string>
    <string name="youtube" translatable="false">YouTube</string>
    <string name="feature_unavailable_root">This feature is currently unavailable on your device. This feature requires ROOT access!</string>
    <string name="power_menu">Power menu</string>
    <string name="application_action_selection">Choose what you want to do with this application</string>
    <string name="uninstall">Uninstall</string>
    <string name="disable">Disable</string>
    <string name="hide_system_apps">Hide system apps</string>
    <string name="show_system_apps">Show system apps</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="turn_off_q">Are you sure you want to turn off your phone?</string>
    <string name="reboot_system_q">Are you sure you want to reboot your phone into system?</string>
    <string name="reboot_recovery_q">Are you sure you want to reboot your phone into Recovery?</string>
    <string name="reboot_download_q">Are you sure you want to reboot your phone into Download Mode?</string>
    <string name="reboot_fastboot_q">Are you sure you want to reboot your phone into Fastboot?</string>
    <string name="reboot_fastbootd_q">Are you sure you want to reboot your phone into FastbootD?</string>
    <string name="current_devices">My current devices</string>
    <string name="computer">Computer</string>
    <string name="information_headphones">Click here to see information about Galaxy Buds 2</string>
    <string name="information_pc">Click here to see PC specifications</string>
    <string name="second_devices">My second devices</string>
    <string name="open_attention_again">Press here to open attention again</string>
    <string name="list">List</string>
    <string name="list_action_button">List with action button</string>
    <string name="open_source_program">Open Source Program</string>
    <string name="success">Success</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="app_list">App list</string>
    <string name="cpu">CPU</string>
    <string name="gpu">GPU</string>
    <string name="ram">RAM</string>
    <string name="rom">ROM</string>
    <string name="motherboard">Motherboard</string>
    <string name="turn_off">Turn off</string>
    <string name="turn_off_s">Turn off the phone</string>
    <string name="reboot">Reboot</string>
    <string name="reboot_system_s">Reboot device to system</string>
    <string name="reboot_recovery">Reboot to Recovery</string>
    <string name="reboot_recovery_s">Reboot device to recovery</string>
    <string name="reboot_download">Reboot to Download Mode (Samsung Only)</string>
    <string name="reboot_download_s">Reboot device to Download Mode</string>
    <string name="reboot_fastboot">Reboot to Fastboot</string>
    <string name="reboot_fastboot_s">Reboot device to Fastboot</string>
    <string name="reboot_fastbootd">Reboot to FastbootD</string>
    <string name="reboot_fastbootd_s">Reboot device to FastbootD</string>
    <string name="refresh">Refresh</string>
    <string name="check_root">Check ROOT</string>
    <string name="show_letters">Show letters</string>
    <string name="hide_letters">Hide letters</string>
    <string name="phone">Phone</string>
    <string name="tablet">Tablet</string>
    <string name="device">Device</string>
    <string name="available">Available</string>
    <string name="gb">GB</string>
    <string name="total">Total</string>
    <string name="used">Used</string>
    <string name="support">Support</string>
    <string name="unsupport">Unsupport</string>
    <string name="about_phone">About this phone</string>
    <string name="about_tablet">About this tablet</string>
    <string name="about_device">About this device</string>
    <string name="android_version">Android version</string>
    <string name="brand">Brand</string>
    <string name="board">Board</string>
    <string name="model">Model</string>
    <string name="codename">Codename</string>
    <string name="build_number">Build number</string>
    <string name="software_development_kit">Software Development Kit (Android SDK)</string>
    <string name="device_type">Device type</string>
    <string name="build_fingerprint">Build fingerprint</string>
    <string name="fingerprint_support">Fingerprint support</string>
    <string name="good">Good</string>
    <string name="cold">Cold</string>
    <string name="fail">Fail</string>
    <string name="over_voltage">Overvoltage</string>
    <string name="dead">Dead</string>
    <string name="overheat">Overheat</string>
    <string name="undefined">Undefined</string>
    <string name="charging">Charging</string>
    <string name="charging_via_usb">Charging via USB</string>
    <string name="wireless_charging">Wireless charging</string>
    <string name="discharging">Discharging</string>
    <string name="mah">mAh</string>
    <string name="battery">Battery</string>
    <string name="health">Health</string>
    <string name="status">Status</string>
    <string name="temperature">Temperature</string>
    <string name="voltage">Voltage</string>
    <string name="technology">Technology</string>
    <string name="capacity">Capacity</string>
    <string name="beta">BETA</string>
    <string name="unknown_cpu">Unknown CPU</string>
    <string name="error_cpu_info">Error reading CPU info</string>
    <string name="mhz">MHz</string>
    <string name="ghz">GHz</string>
    <string name="still_on_beta">Still on BETA! NOT READY FOR USE</string>
    <string name="soc_model">SoC Model</string>
    <string name="soc_manufacturer">SoC Manufacturer</string>
    <string name="application_binary_interface">ABI (Application Binary Interface)</string>
    <string name="cores">Cores</string>
    <string name="frequency_min_max">Frequency (min - max)</string>
    <string name="screen_diagonal">Screen diagonal</string>
    <string name="refresh_rate">Refresh rate</string>
    <string name="dpi_dots_per_inch">DPI (Dots Per Inch)</string>
    <string name="orientation">Orientation</string>
    <string name="inches">inches</string>
    <string name="dpi" translatable="false">dpi</string>
    <string name="hz">Hz</string>
    <string name="portrait">Portrait</string>
    <string name="landscape">Landscape</string>
    <string name="display">Display</string>
    <string name="press_to_grant_permission">Press here to grant permission</string>
    <string name="permission_granted">Permission granted</string>
    <string name="grant_permission_to_continue">Grant permission to continue</string>
    <string name="network">Network</string>
    <string name="wifi_enabled">WiFi enabled</string>
    <string name="mobile_data_enabled">Mobile data enabled</string>
    <string name="not_connected_to_internet">Not connected to internet</string>
    <string name="operator_country">Operator country</string>
    <string name="phone_type">Phone type</string>
    <string name="network_connectivity_status">Network connectivity status</string>
    <string name="check_permission">Check permission</string>
    <string name="fingers_registered">Fingers registered</string>
    <string name="fingers_not_registered">Fingers not registered</string>
    <string name="multiple_rear_cameras_detected">Multiple rear cameras detected</string>
    <string name="single_rear_camera">Single rear camera</string>
    <string name="unknown">Unknown</string>
    <string name="camera">Camera</string>
    <string name="access_denied">Access denied</string>
    <string name="access_granted">Access granted</string>
    <string name="no_suitable_activity_found">No suitable activity found</string>
    <string name="read_phone_state_denied">READ_PHONE_STATE Denied</string>
    <string name="brightness_permission_r">To change the brightness, you need permission to change the settings. You can grant it in the application settings</string>
    <string name="brightness_permission_m">Permission is required to control brightness</string>
    <string name="exiting">Exiting...</string>
    <string name="brightness_fail">Failed to change brightness</string>
    <string name="permission_not_granted">Permission not granted</string>
    <string name="rear_facing_camera">Rear-facing camera</string>
    <string name="camera_resolution">Camera resolution</string>
    <string name="focal_lenght">Focal lenght</string>
    <string name="stabilization_support">Stabilization support</string>
    <string name="flash">Flash</string>
    <string name="rear_facing_camera_second">Rear-facing camera (Second module)</string>
    <string name="rear_facing_camera_third">Rear-facing camera (Third module)</string>
    <string name="front_camera">Front camera</string>
    <string name="check_for_dead_pixels">Check for dead pixels</string>
    <string name="access_request_sent">Access request sent</string>
    <string name="total_recovery_time">Total recovery time</string>
    <string name="recovery_time">Recovery time (minutes)</string>
    <string name="noise">Noise</string>
    <string name="noise_display_time">Noise display time (minutes)</string>
    <string name="horizontal_lines">Horizontal lines</string>
    <string name="horizontal_lines_display_time">Horizontal lines display time (minutes)</string>
    <string name="vertical_lines">Vertical lines</string>
    <string name="vertical_lines_display_time">Vertical Lines Display Time (minutes)</string>
    <string name="brightness_control">Brightness control</string>
</resources>