<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.PowerMenuFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">

            <ImageView
                android:id="@+id/power_menu_icon"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/ic_oui_power"/>

            <TextView
                android:id="@+id/power_menu_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?actionMenuTextColor"
                android:textAlignment="center"
                android:text="@string/access_request_sent"
                android:textSize="24sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <dev.oneuiproject.oneui.widget.Separator
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <dev.oneuiproject.oneui.widget.RoundLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/oui_background_color"
            android:orientation="vertical">

            <com.ost.application.ui.core.widget.CardView
                android:id="@+id/power_off"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:IconDrawable="@drawable/ic_oui_power"
                app:TitleText="@string/turn_off"
                app:SummaryText="@string/turn_off_s"/>

            <com.ost.application.ui.core.widget.CardView
                android:id="@+id/reboot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:IconDrawable="@drawable/ic_oui_restart"
                app:TitleText="@string/reboot"
                app:SummaryText="@string/reboot_system_s"
                app:isDividerViewVisible="true"/>

            <com.ost.application.ui.core.widget.CardView
                android:id="@+id/recovery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:IconDrawable="@drawable/ic_oui_lightning"
                app:TitleText="@string/reboot_recovery"
                app:SummaryText="@string/reboot_recovery_s"
                app:isDividerViewVisible="true"/>

            <com.ost.application.ui.core.widget.CardView
                android:id="@+id/download_mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:IconDrawable="@drawable/ic_oui_download_circle_filled"
                app:TitleText="@string/reboot_download"
                app:SummaryText="@string/reboot_download_s"
                app:isDividerViewVisible="true"/>

            <com.ost.application.ui.core.widget.CardView
                android:id="@+id/fastboot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:IconDrawable="@drawable/ic_oui_restart"
                app:TitleText="@string/reboot_fastboot"
                app:SummaryText="@string/reboot_fastboot_s"
                app:isDividerViewVisible="true"/>

            <com.ost.application.ui.core.widget.CardView
                android:id="@+id/fastbootd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:IconDrawable="@drawable/ic_oui_restart"
                app:TitleText="@string/reboot_fastbootd"
                app:SummaryText="@string/reboot_fastbootd_s"
                app:isDividerViewVisible="true"/>

        </dev.oneuiproject.oneui.widget.RoundLinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>