<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_oui_home_outline"
        android:title="@string/home"
        app:showAsAction="always" />

    <item
        android:id="@+id/navigation_utilities"
        android:icon="@drawable/ic_oui_folder_outline"
        android:title="@string/utilities"
        app:showAsAction="always" />

    <item
        android:id="@+id/navigation_friends"
        android:icon="@drawable/ic_oui_group_outline"
        android:title="@string/friends"
        app:showAsAction="always" />

    <item
        android:id="@+id/navigation_info"
        android:icon="@drawable/ic_oui_info_outline"
        android:title="@string/information"
        app:showAsAction="always" />

</menu>