<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.phoneinfo.CPUInfoFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:paddingHorizontal="24dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/cpu_icon"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/ic_oui_error" />

            <TextView
                android:id="@+id/cpu_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="24sp"
                android:text="@string/still_on_beta"
                android:textColor="@color/red"
                android:textStyle="bold"/>

        </LinearLayout>

        <dev.oneuiproject.oneui.widget.Separator
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <dev.oneuiproject.oneui.widget.RoundLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/oui_background_color"
            android:orientation="vertical">

            <com.ost.application.ui.core.widget.CardView
                android:id="@+id/cpu_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:TitleText="@string/soc_model"/>

            <com.ost.application.ui.core.widget.CardView
                android:id="@+id/cpu_manufacturer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:TitleText="@string/soc_manufacturer"
                app:isDividerViewVisible="true"/>

            <com.ost.application.ui.core.widget.CardView
                android:id="@+id/cpu_abi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:TitleText="@string/application_binary_interface"
                app:isDividerViewVisible="true"/>

            <com.ost.application.ui.core.widget.CardView
                android:id="@+id/cpu_cores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:TitleText="@string/cores"
                app:isDividerViewVisible="true"/>

            <com.ost.application.ui.core.widget.CardView
                android:id="@+id/cpu_cores_clock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:TitleText="@string/frequency_min_max"
                app:isDividerViewVisible="true"/>

            <com.ost.application.ui.core.widget.CardView
                android:id="@+id/gpu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:TitleText="@string/gpu"
                app:isDividerViewVisible="true"
                android:visibility="gone"/>

        </dev.oneuiproject.oneui.widget.RoundLinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>