<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.phoneinfo.BatteryInfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">

            <ImageView
                android:id="@+id/battery_icon"
<<<<<<< Updated upstream
                android:layout_width="120dp"
                android:layout_height="120dp"
=======
                android:layout_width="100dp"
                android:layout_height="100dp"
>>>>>>> Stashed changes
                android:src="@drawable/ic_oui_category_battery"
                app:tint="?actionMenuTextColor"/>

            <TextView
                android:id="@+id/battery_level"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
<<<<<<< Updated upstream
                android:textSize="24sp"
=======
                android:textSize="20sp"
>>>>>>> Stashed changes
                android:textStyle="bold"
                android:textColor="?actionMenuTextColor"/>

        </LinearLayout>

        <dev.oneuiproject.oneui.widget.Separator
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <dev.oneuiproject.oneui.widget.RoundedLinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/oui_background_color"
            android:orientation="vertical">

            <dev.oneuiproject.oneui.widget.CardItemView
                android:id="@+id/battery_health"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/health"
                app:showTopDivider="false"/>

            <dev.oneuiproject.oneui.widget.CardItemView
                android:id="@+id/battery_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/status"
                app:showTopDivider="true"/>

            <dev.oneuiproject.oneui.widget.CardItemView
                android:id="@+id/battery_temp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/temperature"
                app:showTopDivider="true"/>

            <dev.oneuiproject.oneui.widget.CardItemView
                android:id="@+id/battery_voltage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/voltage"
                app:showTopDivider="true"/>

            <dev.oneuiproject.oneui.widget.CardItemView
                android:id="@+id/battery_technology"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/technology"
                app:showTopDivider="true"/>

            <dev.oneuiproject.oneui.widget.CardItemView
                android:id="@+id/battery_capacity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/capacity"
                app:showTopDivider="true"/>

        </dev.oneuiproject.oneui.widget.RoundedLinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>